--- a/baremetal/Makefile
+++ b/baremetal/Makefile
@@ -3,11 +3,12 @@ TARGETS:=$(PROJECT).elf $(PROJECT).bin $(PROJECT).debug.txt
 
 all : $(TARGETS)
 
-#PREFIX:=riscv64-unknown-elf-
-#CFLAGS:=-I/usr/include
+PREFIX:=riscv64-unknown-elf-
+CFLAGS:=-I/usr/include
 
-PREFIX:=../buildroot/output/host/bin/riscv32-buildroot-linux-uclibc-
-CFLAGS:=-fno-stack-protector
+# PREFIX:=../buildroot/output/host/bin/riscv32-buildroot-linux-uclibc-
+# CFLAGS:=-fno-stack-protector
+CFLAGS+=-fno-stack-protector
 CFLAGS+=-static-libgcc -fdata-sections -ffunction-sections
 CFLAGS+=-g -Os -march=rv32ima -mabi=ilp32 -static
 LDFLAGS:= -T flatfile.lds -nostdlib -Wl,--gc-sections
